[package]
name = "nu"
version = "0.1.0"
edition = "2021"
description = "Rust-based, Fast, lightweight, disk space efficient package manager."
license = "MIT"
repository = "https://github.com/yazaldefilimone/nu.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4"
tokio-util = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
flate2 = "1.0"
rayon = "1.5"
tokio-tar = "0.3.1"
semver = "1.0.23"
